--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,825 +1,14 @@
-@import "../scss/UTILITIES/mixins";
-@import "../scss/UTILITIES/variables";
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-html {
-    scroll-behavior: smooth;
-
-}
-
-section[id] {
-    scroll-margin-top: 50px;
-}
-
-body {
-    font-family: "calibri";
-    background-image: url("/assets/img/prestaciones.jpg");
-}
-
-a {
-    text-decoration: none;
-    color: $color-principal;
-    font-weight: bold;
-}
-
-.topheader {
-    box-shadow: 0 4px 5px rgb(186, 186, 186);
-    position: fixed;
-    background-color: rgb(253, 253, 253);
-    left: 0;
-    top: 0;
-    width: 100%;
-}
-
-.topnav {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 0 auto;
-
-
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-
-    img {
-        height: 50px;
-    }
-
-
-}
-
-.logo-mbl img {
-    display: none;
-}
-
-/**MENU**/
-.menu {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-        padding: 0 15px;
-
-        a {
-
-            color: $color-secundario;
-            font-size: 18px;
-            line-height: 50px;
-            text-transform: uppercase;
-        }
-
-        .login {
-            color: $color-principal;
-            font-size: 22px;
-            border-left: 1px solid $color-principal;
-            padding-left: 25px;
-
-        }
-    }
-}
-
-
-
-
-/*** FOOTER ***/
-
-.contenedor-footer {
-    display: block;
-    align-items: center;
-    background: #fff;
-
-    border-top: 2px solid rgb(186, 186, 186);
-
-    .redes {
-        padding-top: 2%;
-        display: flex;
-        justify-content: center;
-        padding: 10px;
-        gap: 10%;
-    }
-
-    .copyright {
-        display: flex;
-        justify-content: center;
-    }
-}
-
-
-/**** SECC INDEX ****/
-.main_index {
-    height: 100vh;
-    background-image: url("../assets/img/index.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    h1 {
-        padding-top: 350px;
-        font-size: 100px;
-    }
-
-    h2 {
-        font-size: 40px;
-    }
-
-    span {
-        color: $color-secundario;
-        font-size: 35px;
-    }
-
-    p {
-        font-size: 12px;
-    }
-
-}
-
-/**** SECC SUC ****/
-
-.main_suc {
-    height: 85vh;
-    background-image: url("../assets/img/sucursales.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    padding-left: 5%;
-    border: 1px solid rgb(211, 211, 211);
-    @include box-shadow;
-
-
-
-    .title {
-        color: #fff;
-        padding: 0;
-        font-size: 30px;
-        text-decoration: underline;
-    }
-
-    .vid {
-        width: 50%;
-        height: 59%;
-        box-shadow: 1em 1em 15px black;
-        border-radius: 20px;
-        border: 1px solid black;
-        object-fit: cover;
-
-        iframe {
-            object-fit: cover;
-            border-radius: 20px;
-
-        }
-    }
-
-    .form-suc {
-        font-size: 18px;
-    }
-
-}
-
-/**** SECC SOBRE NOSOTROS ****/
-.main_us {
-    height: 100vh;
-    display: flex;
-    border-radius: 20px;
-    padding-bottom: 50vh;
-
-
-    .container-us {
-        width: 100%;
-        height: 90vh;
-        margin-top: 10vh;
-        border: 1px solid rgb(211, 211, 211);
-        box-shadow: 5px 5px 15px green;
-        display: flex;
-        justify-content: space-around;
-        @include box-shadow;
-
-        .historia {
-            padding: 20px;
-            text-align: justify;
-            font-size: 18px;
-            background-color: rgb(255, 255, 255, 80%);
-            border-radius: 20px;
-
-            img {
-                float: right;
-                width: 70%;
-                padding: 0 20px;
-                border-radius: 50px;
-                margin: 10px;
-            }
-
-            h2 {
-                font-size: 40px;
-
-                span {
-                    color: $color-principal;
-                    text-decoration: underline;
-                }
-            }
-
-            h3 {
-                span {
-                    font-size: 25px;
-                    color: $color-principal;
-                }
-            }
-
-            p {
-                font-size: 18px;
-
-                span {
-                    color: $color-secundario;
-                    font-weight: bold;
-                    font-size: 25px;
-                }
-            }
-        }
-    }
-}
-
-/*CARRUSEL*/
-
-.carrusel {
-    height: 90px
-}
-
-#slider {
-    width: 100%;
-    background-image: url("../assets/img/sliderObsSoc.png");
-    animation: slider 20s infinite linear;
-}
-
-@keyframes slider {
-    to {
-        background-position: 2000px;
-    }
-}
-
-/**** SECC CONTACTO ****/
-.main_contact {
-    height: 77vh;
-    padding: 1em;
-}
-
-.form-contact {
-    font-size: 16px;
-    font-weight: bold;
-    line-height: 8px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas:
-        "box-c1 box-c2"
-        "box-c1 box-c2"
-        "box-c1 box-c2"
-        "box-c3 box-c3"
-    ;
-    background-image: url("../assets/img/contacto.jpg");
-    background-position: center;
-    border: 1px solid rgb(211, 211, 211);
-    border-radius: 20px;
-    @include box-shadow;
-    padding-top: 2%;
-}
-
-.box-c1 {
-    grid-area: box-c1;
-}
-
-.box-c2 {
-    grid-area: box-c2;
-    padding: 0;
-    line-height: 10px;
-}
-
-.box-c1,
-.box-c2 {
-    display: grid;
-    justify-content: center;
-    justify-self: center;
-}
-
-.box-c1 p,
-.box-c2 p {
-    justify-self: center;
-    padding-bottom: 10px;
-}
-
-
-
-.box-c3 {
-    grid-area: box-c3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    line-height: 8px;
-
-    .reset,
-    .submit {
-        width: fit-content
-    }
-}
-
-/**** SECC PRESTACIONES ****/
-
-.main_prest {
-    width: 100%;
-    height: 180vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: linear-gradient(rgb(0, 91, 0, 50%), #fff);
-
-
-    .prest-txt {
-        margin-top: 9vh;
-        font-size: 40px;
-        color: #fff;
-        text-shadow: 5px 5px black;
-    }
-
-    .prest3 {
-        margin-top: 52px;
-        width: 30%;
-        background-color: #fff;
-        border-radius: 10px;
-
-        p {
-            padding-inline-start: 10px;
-            font-size: 30px;
-        }
-    }
-
-    .prest1 {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 2vh;
-
-        img {
-            margin: 10px;
-            border-radius: 10%;
-            box-shadow: 10px 10px 1em $color-secundario;
-        }
-    }
-
-
-    .prest2 {
-        display: grid;
-        align-items: center;
-        grid-template-columns: repeat(6, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-
-        img {
-            margin: 10px;
-            border-radius: 10%;
-            box-shadow: 10px 10px 1em rgb(0, 81, 0);
-        }
-    }
-
-}
-
-.main_enf,
-.main_kine,
-.main_nutri {
-    display: flex;
-    justify-content: center;
-
-    .container-enf,
-    .container-nutri {
-        width: 75%;
-        margin-top: 10vh;
-        border: 4px solid green;
-        box-shadow: 5px 5px 15px green;
-        border-radius: 20px;
-        text-align: center;
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 30px;
-        background-color: rgb(255, 255, 255, 70%);
-
-        img {
-            float: right;
-            width: 50%;
-        }
-
-        p {
-            color: black;
-        }
-    }
-}
-
-.main_enf {
-    background: url("../assets/img/enf.jpg");
-    background-repeat: repeat;
-    background-size: contain;
-}
-
-.main_kine {
-    background: url("../assets/img/kine3.png");
-    background-size: cover;
-}
-
-.main_nutri {
-    background: url("../assets/img/nutri2.jpg");
-    background-size: contain;
-
-}
-
-.container-kine {
-    width: 75%;
-    margin-top: 10vh;
-    border: 4px solid green;
-    box-shadow: 5px 5px 15px green;
-    border-radius: 20px;
-    display: flex;
-    justify-content: space-around;
-
-    .kinesioterapia {
-        padding: 20px;
-        text-align: justify;
-        font-size: 18px;
-        font-weight: bold;
-        margin-bottom: 30px;
-        background-color: rgb(255, 255, 255, 80%);
-
-        img {
-            float: right;
-            width: 75%;
-            padding: 20px;
-        }
-    }
-
-}
-
-
-/******************************************************** TABLET 800px */
-@media (max-width: 800px) {
-    section[id] {
-        scroll-margin-top: 90px;
-    }
-
-    .topnav {
-        display: flex;
-        justify-content: center;
-        margin: 0 auto;
-
-
-    }
-
-    .logo img {
-        display: none;
-    }
-
-    .logo-mbl img {
-        display: flex;
-        height: 50px;
-    }
-
-    .menu {
-        height: 50px;
-        gap: 15px;
-
-        li {
-
-            a {
-                font-size: 20px;
-            }
-        }
-    }
-
-    .main_index {
-        height: 100vh;
-        background-image: url("../assets/img/index-tbl.jpg");
-        background-size: cover;
-    }
-
-    .main_suc {
-        height: 87vh;
-        background-image: url("../assets/img/suc-tbl.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        border: 1px solid rgb(211, 211, 211);
-        border-radius: 20px;
-        margin: 3em;
-        box-shadow: 1em 1em 15px rgb(255, 94, 0, 85%);
-        padding-left: 3%;
-
-
-        .title {
-            color: $color-principal;
-            text-shadow: 2px 2px #fff;
-        }
-
-        .vid {
-            margin-top: 5%;
-            box-shadow: 1em 1em 15px rgb(255, 94, 0, 85%);
-            border-radius: 20px;
-            border: none;
-            object-fit: cover;
-        }
-
-        .form-suc {
-            color: #fff;
-        }
-    }
-
-    .main_us {
-        .container-us {
-            width: 100%;
-            height: 65vh;
-            margin-top: 10vh;
-            overflow-y: auto;
-        }
-    }
-
-    /**** SECC CONTACTO ****/
-    .main_contact {
-        height: 77vh;
-
-        .form-contact {
-            height: 40vh;
-            line-height: 8px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background-image: url("../assets/img/contacto-tbl.jpg");
-            background-size: cover;
-            border: 1px solid rgb(211, 211, 211);
-            border-radius: 20px;
-            @include box-shadow;
-            padding-top: 0%;
-            margin-top: 10%;
-            font-size: 20px
-        }
-    }
-
-    /**** SECC PRESTACIONES ****/
-
-    .main_prest {
-        height: 145vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        background: linear-gradient(rgb(255, 183, 0), #fff);
-
-        .prest-txt {
-            padding-top: 10px;
-            font-size: 40px;
-            color: #fff;
-            text-shadow: 5px 5px black;
-            margin-bottom: 0;
-        }
-
-        .prest1 {
-            display: flex;
-            margin-top: 0;
-            margin-bottom: 30px;
-
-            img {
-                margin: 10px;
-                border-radius: 10%;
-                box-shadow: 10px 10px 1em purple;
-            }
-        }
-
-        .prest2 {
-            margin-bottom: 20vh;
-            grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: repeat(3, 1fr);
-            margin-bottom: 0;
-
-            img {
-                width: 89%;
-                box-shadow: 6px 6px 0.5em rgb(0, 81, 0);
-                width: 75%;
-                margin-left: 10%;
-            }
-        }
-
-        .prest3 {
-            margin-top: 0;
-            width: 90%;
-            margin-bottom: -15%;
-
-            p {
-                padding-inline-start: 10px;
-                font-size: 30px;
-            }
-        }
-    }
-}
-
-/******************************************************** MOBILE 420 */
-@media (max-width: 420px) {
-    section[id] {
-        scroll-margin-top: 65px;
-    }
-
-    .topnav {
-        display: flex;
-        justify-content: center;
-        margin: 0 auto;
-
-        .menu {
-            gap: 8px;
-
-
-            li {
-                padding: 0 15px;
-
-                .login {
-                    border-left: 1px solid $color-principal;
-                    padding: 0 10px;
-                }
-            }
-
-        }
-
-        .logo {
-            padding-left: 0;
-
-            img {
-                height: 50px;
-            }
-        }
-
-        .menu {
-            height: 50px;
-
-            li {
-                padding: 0;
-
-                a {
-                    font-size: 12px;
-                }
-            }
-        }
-
-    }
-
-    .main_index {
-        height: 100vh;
-        margin-top: 40px;
-        background-image: url("../assets/img/index-mbl.jpg");
-        background-size: cover;
-        background-position: center;
-
-        h1 {
-            padding-top: 350px;
-            font-size: 50px;
-            color: $color-principal;
-        }
-
-        h2 {
-            color: $color-principal;
-            font-size: 20px;
-        }
-
-    }
-
-    .main_suc {
-        height: 87vh;
-        background-image: url("../assets/img/suc-mbl.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-        border: 1px solid rgb(211, 211, 211);
-        @include box-shadow;
-        padding-left: 5%;
-
-
-        .title {
-            color: $color-secundario;
-            font-size: 25px;
-        }
-
-        .vid {
-            margin-top: 3%;
-            box-shadow: 1em 1em 15px rgb(255, 94, 0, 85%);
-            border-radius: 20px;
-            border: none;
-            object-fit: cover;
-        }
-
-        .form-suc {
-            color: #fff;
-        }
-    }
-
-    /**** SECC US ****/
-
-    .main_us {
-        padding-bottom: 0;
-
-        .container-us {
-            width: 120vw;
-            height: 90vh;
-            margin-top: 0vh;
-            overflow-y: auto;
-
-            .historia {
-                padding: 15px;
-                height: 60em;
-                background-color: rgb(255, 255, 255, 80%);
-
-                img {
-                    float: none;
-                    width: 100%;
-                    padding: 0;
-                    margin: 0;
-                }
-            }
-        }
-    }
-
-    /**** SECC CONTACTO ****/
-
-    .main_contact {
-        height: 75vh;
-        padding: 0;
-        margin: 0;
-
-        .box-c1,
-        .box-c2 {
-
-            .box-c1 p,
-            .box-c2 p {
-                line-height: 6px
-            }
-        }
-
-        .form-contact {
-            height: 70vh;
-            line-height: 5px;
-            background-size: 13.5em 30em;
-            padding: 50px;
-            border-radius: 20px;
-            @include box-shadow;
-            padding-top: 10%;
-            margin-top: 0;
-            font-size: 20px;
-        }
-    }
-
-
-
-    /**** SECC SERVICIOS ****/
-
-    .main_prest {
-        height: 120vh;
-        display: flex;
-        background: linear-gradient(rgb(255, 183, 0), #fff, $color-principal);
-
-
-        .prest-txt {
-            padding-top: 0;
-            font-size: 40px;
-            color: #fff;
-            text-shadow: 2px 2px black;
-            margin-bottom: 0;
-        }
-
-        .prest1 {
-            width: 250px;
-            display: flex;
-            margin-top: 0;
-            margin-bottom: 0;
-            overflow-x: scroll;
-
-            img {
-                margin-left: 30px;
-                border-radius: 10%;
-                box-shadow: 10px 10px 1em purple;
-            }
-        }
-
-        .prest3 {
-            display: none;
-        }
-    }
-}
+@import "./utilities/variables";
+@import "./utilities/mixins";
+@import "./base/reset";
+@import "./layout/header";
+@import "./layout/footer";
+@import "./layout/main-index";
+@import "./layout/main-suc";
+@import "./layout/main-us";
+@import "./layout/carrusel";
+@import "./layout/main-contacto";
+@import "./layout/main-prestaciones";
+@import "./layout/main-enf-kin-nutri";
+@import "./layout/table-800px";
+@import "./layout/mobile-420px";
